--- a/src/scss/layouts/_quotation-request.scss
+++ b/src/scss/layouts/_quotation-request.scss
@@ -1,11 +1,11 @@
-.qutaion-h{
-  .hero-content{
+.qutaion-h {
+  .hero-content {
     display: flex;
     align-items: center;
     justify-content: center;
     top: 0;
     height: 100%;
-    p{
+    p {
       margin-top: 20px;
       @include font-size(15px);
       color: $white;
@@ -15,23 +15,23 @@
       padding-right: 15px;
     }
   }
-  @include media-breakpoint-down(lg){
-    h1{
+  @include media-breakpoint-down(lg) {
+    h1 {
       @include font-size(40px);
     }
-    p{
+    p {
       @include font-size(13px);
       margin-top: 0 !important;
     }
   }
 }
-.steps-title{
+.steps-title {
   @extend .position-relative;
   margin-bottom: 40px;
-  @include media-breakpoint-down(md){
+  @include media-breakpoint-down(md) {
     margin-bottom: 0;
-  };
-  .total-bg{
+  }
+  .total-bg {
     position: absolute;
     height: 100%;
     top: 0;
@@ -39,13 +39,13 @@
     width: 100%;
     height: 100%;
     border-bottom-#{$right}-radius: 20px;
-    @include media-breakpoint-down(md){
+    @include media-breakpoint-down(md) {
       display: none;
-    };
+    }
   }
-  .steps-num{
+  .steps-num {
     text-align: #{$right};
-    p{
+    p {
       @include font-size(100px);
       font-weight: 300;
       color: $brand-color;
@@ -54,18 +54,18 @@
       display: block;
       margin-bottom: 0;
     }
-    span{
+    span {
       position: absolute;
       top: 0;
       #{$right}: -10px;
       height: 100%;
       display: flex;
       align-items: center;
-      i{
+      i {
         @include font-size(21px);
         @include opacity(0.2);
         height: 21px;
-        + i{
+        + i {
           @include font-size(35px);
           height: 35px;
           margin-#{$left}: -17px;
@@ -73,27 +73,27 @@
         }
       }
     }
-    @include media-breakpoint-down(md){
+    @include media-breakpoint-down(md) {
       border-bottom-#{$right}-radius: 20px;
       background: $light-gray;
-      p{
+      p {
         padding-#{$right}: 0;
       }
-      span{
+      span {
         #{$right}: -22px;
       }
-    };
+    }
   }
-  .steps-cap{
+  .steps-cap {
     display: flex;
     align-items: center;
-    p{
+    p {
       margin-bottom: 0;
       color: $basic-gray;
       font-weight: 300;
       @include font-size(25px);
       text-transform: capitalize;
-      span{
+      span {
         text-transform: uppercase;
         @include font-size(40px);
         @include opacity(0.5);
@@ -101,28 +101,28 @@
         line-height: 30px;
         margin-bottom: 5px;
       }
-      @include media-breakpoint-down(md){
+      @include media-breakpoint-down(md) {
         @include font-size(17px);
-      };
+      }
     }
   }
 }
-.step-active{
-@include media-breakpoint-down(md){
-  display: none;
-}
-  .order-steps{
-    li{
+.step-active {
+  @include media-breakpoint-down(md) {
+    display: none;
+  }
+  .order-steps {
+    li {
       @include make-col(3);
-      &:not(:first-child){
-        h3{
+      &:not(:first-child) {
+        h3 {
           @include opacity(0.4);
         }
       }
-      &:first-child{
+      &:first-child {
         position: relative;
-        &::after{
-          content: "\e009";
+        &::after {
+          content: '\e009';
           width: 38px;
           height: 38px;
           background: $white;
@@ -137,219 +137,215 @@
           padding-top: 8px;
         }
       }
-
     }
   }
-  h3{
+  h3 {
     font-weight: 400;
   }
   p,
   figure + i,
-  figcaption + i{
+  figcaption + i {
     display: none !important;
   }
 }
-.custom-order-form{
+.custom-order-form {
   @extend .pt-sec;
-  .title-container{
+  .title-container {
     position: relative;
   }
-  .sec-header{
+  .sec-header {
     margin-bottom: 15px;
-    h1{
+    h1 {
       @include font-size(30px);
-      p{
+      p {
         padding-#{$left}: 40px;
       }
-      @include media-breakpoint-down(md){
+      @include media-breakpoint-down(md) {
         display: flex;
-        p{
+        p {
           margin-bottom: 7px;
         }
-      };
+      }
     }
-    span{
-      @include media-breakpoint-down(md){
+    span {
+      @include media-breakpoint-down(md) {
         margin: 0;
       }
     }
   }
-  .open-garage{
-   @extend .open-garage;
-  }
-  .sec-shadow{
+  .sec-shadow {
     @include box-shadow;
     border-radius: corner-values(0 0 $border-radius-base $border-radius-base);
     padding: 10px 15px 15px;
     margin-bottom: 45px;
 
-    h3{
+    h3 {
       @include font-size(20px);
       font-weight: 400;
       margin-bottom: 15px;
       text-transform: capitalize;
     }
-    &.part-array{
+    &.part-array {
       border-bottom-#{$right}-radius: 0;
       margin-bottom: 60px;
       padding-bottom: 0;
     }
-    .ship-info{
-      .phone-info{
+    .ship-info {
+      .phone-info {
         padding: 15px !important;
-        .phone-number{
+        .phone-number {
           display: flex;
-          .first{
+          .first {
             margin-#{$right}: 5px;
-            .form-control{
+            .form-control {
               border-radius: corner-values(20px 0 0 20px) !important;
               width: 70px;
               text-align: center;
             }
           }
-          .RenderField{
+          .RenderField {
             width: 100%;
           }
-          div{
+          div {
             margin-top: 0px;
           }
         }
       }
     }
-    @media (min-width: 992px){
-      .city-filed{
+    @media (min-width: 992px) {
+      .city-filed {
         @include padding-right(15px);
       }
     }
   }
   .form-control,
-  .part-actions{
+  .part-actions {
     height: 55px;
   }
-  form{
-    .select__menu{
+  form {
+    .select__menu {
       z-index: 2;
     }
-    .row{
-      [class*='col']:first-child{
+    .row {
+      [class*='col']:first-child {
         .select__control,
         .has-float-label,
-        .has-float-label input{
+        .has-float-label input {
           border-top-#{$left}-radius: $border-radius-base;
         }
       }
-      @include media-breakpoint-up(lg){
-        [class*='col']:first-child{
+      @include media-breakpoint-up(lg) {
+        [class*='col']:first-child {
           .select__control,
           .has-float-label,
-          .has-float-label input{
+          .has-float-label input {
             border-bottom-#{$left}-radius: $border-radius-base;
           }
         }
-        [class*='col']{
+        [class*='col'] {
           padding-#{$right}: 6px;
         }
-        [class*='col'] + [class*='col']{
+        [class*='col'] + [class*='col'] {
           padding-#{$left}: 0;
         }
-        [class*='col']:last-child{
+        [class*='col']:last-child {
           padding-#{$right}: 15px;
           .select__control,
           .has-float-label,
-          .has-float-label input{
+          .has-float-label input {
             border-bottom-#{$right}-radius: $border-radius-base;
           }
         }
       }
-      @include media-breakpoint-down(md){
-        [class*='col']:last-child{
+      @include media-breakpoint-down(md) {
+        [class*='col']:last-child {
           padding-#{$right}: 15px;
           .select__control,
           .has-float-label,
-          .has-float-label input{
+          .has-float-label input {
             border-bottom-#{$right}-radius: $border-radius-base;
           }
         }
-        [class*='col']{
+        [class*='col'] {
           margin-top: 10px;
         }
         [class*='col']:nth-child(1),
-        [class*='col']:nth-child(2){
+        [class*='col']:nth-child(2) {
           margin-top: 0;
         }
-        [class*='col']:nth-child(even){
+        [class*='col']:nth-child(even) {
           padding-#{$left}: 0;
         }
-        [class*='col']:nth-child(odd){
+        [class*='col']:nth-child(odd) {
           padding-#{$right}: 10px;
         }
-        &.vehicle-info{
-          [class*='col']:nth-child(3){
+        &.vehicle-info {
+          [class*='col']:nth-child(3) {
             .select__control,
             .has-float-label,
-            .has-float-label input{
+            .has-float-label input {
               border-bottom-#{$left}-radius: $border-radius-base;
             }
           }
         }
-        &.ship-info{
-          [class*='col']:first-child{
+        &.ship-info {
+          [class*='col']:first-child {
             .select__control,
             .has-float-label,
-            .has-float-label input{
+            .has-float-label input {
               border-bottom-#{$left}-radius: $border-radius-base;
             }
           }
-          @include media-breakpoint-down(md){
-            [class*='col']{
+          @include media-breakpoint-down(md) {
+            [class*='col'] {
               margin-top: 0;
             }
-            [class*='col']:not(:first-child){
+            [class*='col']:not(:first-child) {
               padding-#{$left}: 0;
               padding-#{$right}: 10px;
             }
           }
         }
-        &.submit-qout{
-          [class*='col']{
+        &.submit-qout {
+          [class*='col'] {
             padding-right: 15px;
             padding-left: 15px;
           }
         }
       }
-      @include media-breakpoint-down(sm){
-        [class*='col']{
+      @include media-breakpoint-down(sm) {
+        [class*='col'] {
           padding-right: 15px !important;
           padding-left: 15px !important;
         }
-        [class*='col'] + [class*='col']{
+        [class*='col'] + [class*='col'] {
           margin-top: 10px;
         }
-        [class*='col']:last-child{
+        [class*='col']:last-child {
           .select__control,
           .has-float-label,
-          .has-float-label input{
+          .has-float-label input {
             border-bottom-#{$right}-radius: $border-radius-base;
             border-bottom-#{$left}-radius: $border-radius-base;
           }
         }
-        &.vehicle-info{
-          [class*='col']:nth-child(3){
+        &.vehicle-info {
+          [class*='col']:nth-child(3) {
             .select__control,
             .has-float-label,
-            .has-float-label input{
+            .has-float-label input {
               border-bottom-#{$left}-radius: 0;
             }
           }
         }
       }
     }
-    .input-file{
+    .input-file {
       top: 7px;
     }
   }
 }
-.step-num{
+.step-num {
   position: absolute;
   top: 0;
   #{$left}: 0;
@@ -357,19 +353,19 @@
   font-weight: 300;
   color: $brand-color;
   line-height: 28px;
-  > span{
+  > span {
     display: inline-flex;
     align-items: center;
     position: relative;
     top: -3px;
     #{$left}: -6px;
   }
-  i{
+  i {
     color: $basic-gray;
     @include font-size(14px);
     @include opacity(0.3);
     height: 13px;
-    + i{
+    + i {
       @include opacity(0.4);
       @include font-size(23px);
       height: 22px;
@@ -379,58 +375,58 @@
     }
   }
 }
-.vehicle-not-empty{
-  h3{
+.vehicle-not-empty {
+  h3 {
     margin-bottom: 0 !important;
     display: flex;
     align-items: center;
   }
 }
-.vehicle-info{
-  .float-label{
+.vehicle-info {
+  .float-label {
     min-width: 160px;
   }
 }
-.part-array{
-  .quantity{
+.part-array {
+  .quantity {
     border-top-#{$left}-radius: 0 !important;
     border-bottom-#{$left}-radius: 0 !important;
-    button{
+    button {
       height: auto;
       width: 55px;
     }
   }
-  .row + .row{
+  .row + .row {
     padding-top: 15px;
-    .quantity{
-      button{
+    .quantity {
+      button {
         width: 50px;
       }
     }
   }
-  .row:last-child{
+  .row:last-child {
     margin-top: 0;
   }
-  .delete-part{
+  .delete-part {
     background: transparent;
     width: 65px;
     @include opacity(0.3);
     display: flex;
     align-items: center;
-    i{
+    i {
       @include font-size(26px);
       height: 27px;
     }
-    &:disabled{
+    &:disabled {
       display: none;
     }
-    &:hover{
+    &:hover {
       @include opacity(1);
     }
   }
-  .add-part{
+  .add-part {
     position: relative;
-    button{
+    button {
       border-top-#{$right}-radius: 0 !important;
       position: absolute;
       height: 45px;
@@ -440,105 +436,97 @@
       @include font-size(15px);
       color: $brand-color;
       @include box-shadow-size(0px, 4px, 18px, 0px, rgba(0, 0, 0, 0.07));
-      span{
+      span {
         margin-left: 7px;
         position: relative;
         top: -2px;
       }
-      i{
+      i {
         @include font-size(17px);
         height: 17px;
       }
     }
   }
-  > div > .row{
-    @include media-breakpoint-down(md){
+  > div > .row {
+    @include media-breakpoint-down(md) {
       padding-top: 20px;
       padding-bottom: 20px;
       border-top: 2px solid $light-gray;
-      [class*='col']:first-child{
+      [class*='col']:first-child {
         .has-float-label,
-        .has-float-label input{
+        .has-float-label input {
           border-top-#{$left}-radius: $border-radius-base;
           border-bottom-#{$left}-radius: $border-radius-base;
         }
       }
-      &:last-child{
+      &:last-child {
         padding: 0;
         border-top-width: 0;
       }
-
-    };
-    @include media-breakpoint-down(sm){
-      [class*='col']:last-child{
+    }
+    @include media-breakpoint-down(sm) {
+      [class*='col']:last-child {
         margin-top: 10px !important;
         padding-#{$left}: 15px !important;
         padding-#{$right}: 15px !important;
         .has-float-label,
-        .has-float-label input{
+        .has-float-label input {
           border-bottom-#{$left}-radius: 0;
         }
       }
-      .part-actions{
+      .part-actions {
         max-width: none;
-          .quantity{
-            border-bottom-left-radius: $border-radius-base !important;
-            .btn{
-              z-index: 1;
-            }
+        .quantity {
+          border-bottom-left-radius: $border-radius-base !important;
+          .btn {
+            z-index: 1;
           }
+        }
       }
-    };
+    }
   }
 }
-.part-actions{
+.part-actions {
   max-width: 230px;
   display: flex;
-  .quantity{
+  .quantity {
     max-width: none;
   }
 }
-.submit-qout{
+.submit-qout {
   margin-bottom: 90px;
-  .col-lg{
+  .col-lg {
     display: flex;
-    > p{
+    > p {
       @include font-size(17px);
       margin-bottom: 0;
       display: flex;
       align-items: center;
       @include opacity(0.8);
-      a{
+      a {
         color: $brand-color;
         padding-left: 5px;
         padding-right: 5px;
       }
     }
   }
-  .btn-primary{
+  .btn-primary {
     @include font-size(20px);
     display: flex;
     align-items: center;
     @include box-shadow();
-    i{
+    i {
       @include font-size(23px);
       height: 25px;
     }
   }
-  @include media-breakpoint-down(lg){
-    .col-lg > p{
+  @include media-breakpoint-down(lg) {
+    .col-lg > p {
       margin-bottom: 20px;
       display: block;
     }
-    .btn-primary{
+    .btn-primary {
       justify-content: flex-end;
     }
-  };
-}
-
-//remove validation
-.select-input{
-  .input-group-append{
-    display: none;
   }
 }
